--- a/assets/assets/translations/en.json
+++ b/assets/assets/translations/en.json
@@ -56,7 +56,7 @@
   "Document": "Document",
   "Download": "Download",
   "filename": "filename.pdf",
-  "Cartoon\n\t\tFrom": "\tمن",
+  "Cartoon\n\t\tFrom": "Cartoon\n\t\tFrom",
   "Cartoon\n\t\t\t\tTo": "Cartoon To",
   "\t\tNo.of\nCartoon": "No.Of Cartoon",
   "Cartoon Code": "Cartoon Code",
